--- a/meiyingflippy.ini
+++ b/meiyingflippy.ini
@@ -6,7 +6,7 @@
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/qichiyuhub/rule/master/Direct.list
 ruleset=🤖 AI,https://raw.githubusercontent.com/qichiyuhub/rule/master/AI.list
 ;全球直连
-ruleset=🎯 全球直连,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China_Classical.yaml
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
 ;隐私保护
