--- a/meiyingflippy.ini
+++ b/meiyingflippy.ini
@@ -54,6 +54,7 @@ ruleset=📦 Docker,https://raw.githubusercontent.com/blackmatrix7/ios_rule_scri
 ruleset=🌍 国外社交,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Line/Line.list
 ruleset=🌍 国外社交,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Twitter/Twitter.list
 ruleset=🌍 国外社交,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Whatsapp/Whatsapp.list
+ruleset=🌍 国外社交,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Facebook/Facebook.list
 ;R18
 ruleset=🚫 R18,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/DMM/DMM.list
 
