--- a/Nikki.yaml
+++ b/Nikki.yaml
@@ -72,8 +72,7 @@ tun:
   enable: true
   # system/gvisor/mixed
   stack: mixed
-  # 这里我屏蔽了劫持53
-  # dns-hijack: ["any:53", "tcp://any:53"]
+  dns-hijack: ["any:53", "tcp://any:53"]
   auto-route: true
   auto-redirect: true
   auto-detect-interface: true
